fix popover content overflow issue

--- a/less/_popovers.less
+++ b/less/_popovers.less
@@ -14,7 +14,6 @@
 	.content {
 
 		color: @global-text !important;
-		overflow: initial !important;
 
 		.source-frame-popover-title {
 			color: @popover-title !important;
